# swagger/swagger.json
@@ -84,6 +84,83 @@
           "200": { "description": "Data pengguna berhasil diambil" }
         }
       }
+    },
+    "/api/product": {
+      "get": {
+        "tags": ["Produk"],
+        "summary": "Mengambil data semua produk",
+        "responses": {
+          "200": { "description": "Data produk berhasil diambil" },
+          "404": { "description": "Data produk kosong" },
+          "500": { "description": "Internal Server Error" }
+        }
+      }
+    },
+    "/api/product/{id}": {
+      "get": {
+        "tags": ["Produk"],
+        "summary": "Mengambil data produk berdasarkan id",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "ID produk yang ingin diambil"
+          }
+        ],
+        "responses": {
+          "200": { "description": "Data produk berhasil diambil" },
+          "404": { "description": "Data produk tidak ditemukan" },
+          "500": { "description": "Internal Server Error" }
+        }
+      }
+    },
+    "/api/product/": {
+      "post": {
+        "tags": ["Produk"],
+        "summary": "Mengirimkan data produk baru",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "namaProduk": {
+                    "type": "string",
+                    "example": "Kripik Bayam"
+                  },
+                  "harga": {
+                    "type": "integer",
+                    "example": "10000"
+                  },
+                  "deskripsi": {
+                    "type": "string",
+                    "example": "Kripik paling sehat sedunia"
+                  },
+                  "linkShoppe": {
+                    "type": "string",
+                    "example": "http://link ke shoppe"
+                  },
+                  "linkTokopedia": {
+                    "type": "string",
+                    "example": "http://link ke tokopedia"
+                  },
+                  "gambar": {
+                    "type": "string",
+                    "format": "binary",
+                    "description": "Upload gambar produk"
+                  }
+                },
+                "required": ["namaProduk", "harga", "deskripsi"]
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
